--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     window.onload = function() {
 
       const ui = SwaggerUIBundle({
-        url: "ga-api.yml",
+        url: "ga-api.yaml",
         dom_id: "#Garden_App-oas",
         deepLinking: true,
       })
